# showup

./: .gitignore  Cargo.toml  README.md
contracts/event/: Cargo.toml
contracts/event/src/: lib.rs  test.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/interfaces/: Cargo.toml
contracts/interfaces/src/: lib.rs
docs/: deployments.md
web/: .gitignore  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/create/: page.tsx
web/src/app/e/[id]/: page.tsx
web/src/app/send/: page.tsx
web/src/components/: ActivityFeed.tsx  BalanceCard.tsx  CreateEvent.tsx  EventDetail.tsx  GridTrail.tsx  Logo.tsx  SendPayment.tsx  TopBar.tsx  WalletMenu.tsx  ui.tsx
web/src/lib/: contracts.ts  events.ts  format.ts  secrets.ts  signer.ts  stellar.ts  wallet.tsx
